--- a/src/css/button.css
+++ b/src/css/button.css
@@ -5,6 +5,7 @@
     padding: 16px;
     font-size: 16px;
     border: none;
+    border-radius: 0.3rem;
     cursor: pointer;
 }
 
@@ -36,7 +37,9 @@
     text-decoration: none;
     display: block;
 }
-
+#wrapper{
+	overflow-x:visible;
+}
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
 
